# gimg

./: .gitmodules  Android.mk  CMakeLists.txt  README.md  gimg_bmp.c  gimg_bmp.h  gimg_dds.c  gimg_dds.h  gimg_etc1.c  gimg_etc1.h  gimg_etc2.c  gimg_etc2.h  gimg_etcpack.cpp  gimg_etcpack.h  gimg_export.c  gimg_export.h  gimg_hgt.c  gimg_hgt.h  gimg_import.c  gimg_import.h  gimg_jpg.c  gimg_jpg.h  gimg_math.h  gimg_png.c  gimg_png.h  gimg_ppm.c  gimg_ppm.h  gimg_pvr.c  gimg_pvr.h  gimg_rg_etc1.cpp  gimg_rg_etc1.h  gimg_tga.c  gimg_tga.h  gimg_tif.c  gimg_tif.h  gimg_tiff.c  gimg_tiff.h  gimg_typedef.h  gimg_utility.c  gimg_utility.h
